force-app/main/default/objects/Housing_History__c/Housing_History__c.object-meta.xml
<CustomObject>
    <description>Housing history of the contact</description>
    <label>Housing History</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>History No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Housing History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>