force-app/main/default/objects/Housing_History__c/fields/Eviction__c.field-meta.xml
<CustomField>
    <fullName>Eviction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eviction</label>
    <type>Checkbox</type>
</CustomField>