force-app/main/default/objects/Housing_History__c/fields/Housing_History_Belongs_to_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Housing_History_Belongs_to_Contact_Owner__c</fullName>
    <formula>Contact__r.Contact_owner_ID__c = CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing History Belongs to Contact Owner</label>
    <type>Checkbox</type>
</CustomField>