force-app/main/default/objects/Housing_History__c/fields/Housing_History_Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_History_Ownership_Status__c</fullName>
    <formula>IF( 
   Housing_History_Belongs_to_Contact_Owner__c,
  &quot;Self&quot;,
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing History Ownership Status</label>
    <type>Text</type>
</CustomField>