force-app/main/default/objects/Housing_History__c/fields/Issues__c.field-meta.xml
<CustomField>
    <fullName>Issues__c</fullName>
    <label>Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>