force-app/main/default/objects/Housing_History__c/fields/Landlord_Phone__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Phone__c</fullName>
    <label>Landlord Phone</label>
    <type>Phone</type>
</CustomField>