force-app/main/default/objects/Housing_History__c/fields/Months_Rented__c.field-meta.xml
<CustomField>
    <fullName>Months_Rented__c</fullName>
    <formula>IF(ISBLANK( Move_Out_Date__c), 
MONTH(TODAY()) + (12*(YEAR(TODAY())-YEAR(Move_In_Date__c))) - MONTH(Move_In_Date__c), 
MONTH(Move_Out_Date__c) + (12*(YEAR(Move_Out_Date__c)-YEAR(Move_In_Date__c))) - MONTH(Move_In_Date__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Rented</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>