force-app/main/default/objects/Housing_History__c/fields/Type_of_Housing__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Housing__c</fullName>
    <label>Type of Housing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Housing_Category_Picklist</valueSetName>
    </valueSet>
</CustomField>