force-app/main/default/objects/Housing_History__c/fields/Unpaid_Balance__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unpaid Balance</label>
    <type>Checkbox</type>
</CustomField>